--- a/public/styles/_core/homepage.scss
+++ b/public/styles/_core/homepage.scss
@@ -6,12 +6,29 @@ $light-mint: #38d9b3;
 $dark-mint: #00c8a9;
 $light-blue: #57e2ff;
 $dark-blue: #20b5e6;
+$type-blue: #006f93;
 $white: #ffffff;
 
 $body-type: Avenir Next Med, sans-serif;
 $header-type: Avenir Next Bold, sans-serif;
 $sub-header-type: Avenir Next Demi Bold, sans-serif;
 $at-sign-type: Avenir Next Ultra-Light, sans-serif;
+
+@include font-face(Avenir, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1/emerging-citizens/fonts/315916_0_0', null, null, woff2 woff eot ttf);
+@include font-face(AvenirLight, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1/emerging-citizens/fonts/315916_1_0', null, null, woff2 woff eot ttf);
+@include font-face(AvenirBold, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1/emerging-citizens/fonts/315916_2_0', null, null, woff2 woff eot ttf);
+
+p {
+	font-family: Avenir;
+}
+
+h3 {
+	font-family: AvenirBold;
+}
+
+h5 {
+	font-family: AvenirBold;
+}
 
 .container{
 	padding: 0;
@@ -27,11 +44,12 @@ $at-sign-type: Avenir Next Ultra-Light, sans-serif;
 
 	.row{
 		width: 100%;
-		padding: 0;
+		padding: 25px;
 		margin: 0;
 
 		&.top{
 			background-color: $light-mint;
+			min-height: 300px;
 		}
 		&.pitch{
 			background-color: $white;
@@ -52,14 +70,27 @@ $at-sign-type: Avenir Next Ultra-Light, sans-serif;
 	.top-section{
 
 		.header{
-
+			color: white;
 		}
+
+		.whats{
+			font-family: AvenirBold;
+		}
+
+		.at-sign{
+			font-family: AvenirLight;
+		}
+
+		.header-stake{
+			font-family: AvenirBold;
+		}
+
 		.play-button{
 
 		}
 	}
 	.game-pitch{
-
+		float: right;
 		.tagline{
 
 		}
@@ -96,7 +127,7 @@ $at-sign-type: Avenir Next Ultra-Light, sans-serif;
 		}
 	}
 	.game-features{
-		
+		color: $type-blue;
 		.feature-text{
 
 		}
@@ -134,7 +165,8 @@ $at-sign-type: Avenir Next Ultra-Light, sans-serif;
 	.game-flow{
 
 		.flow-play-header{
-
+			color: $background-mint;
+			padding-bottom: 1px;
 		}
 		.flow-play-para{
 
@@ -144,23 +176,25 @@ $at-sign-type: Avenir Next Ultra-Light, sans-serif;
 		}
 	}
 	.game-learn{
-
+		padding: 0 50px;
+		color:white;
 		.learn-more-header{
-
+			padding-bottom: 1px;
 		}
 		.learn-more-para{
 
 		}
 	}
 	.design-dev-team{
+		display: inline;
 		
 		h3{
 			color: $white;
 		}
 
 		.team{
-			display: inline;
 			color: $white;
+			display: inline;
 		}
 		.team-title{
 			color: $type-dark-mint;
