create resuming partial small fixes due to learning-games-core updates

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -22,6 +22,8 @@
 
 	// Lobby game screens
 	&.lobby {
+
+		padding-top: 40px;
 		// Show back button on login screen
 		button#lobby-back {
 			display: block;
