--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -80,6 +80,8 @@
                     </section>
                     <button class="btn" id="lobby-back"><</button>
 
+                    {{> shared/resuming }}
+
                     <!-- BODY CONTENT START -->
                     {{{body}}}
 
