--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,7 +1,7 @@
 {{!-- JOIN GAME --}}
 
 <div class="lobby" id="login" class="col-sm-12">
-  <div class="form login col-lg-6 col-centered">
+  <div class="form login col-lg-6 col-md-6 col-sm-6 col-xs-12 col-centered">
     <div id="login-header">
       <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
       <p>Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
