--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -14,6 +14,15 @@ $color-turquoise: #1EB4BB;
 $color-seafoam: #00D6B4;
 $color-orange: #febb2c;
 $color-pink: #fd2c76;
+$background-mint: #00d5b4;
+$type-dark-mint: #178f79;
+$type-black: #6a6a6a;
+$light-mint: #38d9b3;
+$dark-mint: #00c8a9;
+$light-blue: #57e2ff;
+$dark-blue: #20b5e6;
+$type-blue: #006f93;
+$white: #ffffff;
 
 // Player One
 $player-blue: #35AFD2;
@@ -31,8 +40,10 @@ $player-red-tint: #D49589;
 $player-purple: #B048E7;
 $player-purple-tint: #D090EF; 
 
-
-
+$body-type: Avenir Next Med, sans-serif;
+$header-type: Avenir Next Bold, sans-serif;
+$sub-header-type: Avenir Next Demi Bold, sans-serif;
+$at-sign-type: Avenir Next Ultra-Light, sans-serif;
 
 // Heights
 $nav-height: 50px;
