--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -39,17 +39,17 @@
   <div class="row feature col-lg-10 col-sm-10 col-centered">
     <div class="game-features">
       <div class="feature-one col-sm-4">
-      	<div class="feature-image feature-one-image">{{{cloudinaryImg content.featureOneIcon crop=scale height=200}}}</div>
+      	<div class="feature-image feature-one-image"><img src="{{{cloudinaryUrl content.featureOneIcon width=auto height=100 crop='scale' quality=100}}}"></div>
         <div class="feature-header-one"><h3>{{{content.featureOneTitle.html}}}</h3></div>
       	<div class="feature-text feature-one-text">{{{content.featureOneParagraph.html}}}</div>
       </div>
       <div class="feature-two col-sm-4">
-      	<div class="feature-image feature-two-image">{{{cloudinaryImg content.featureTwoIcon crop=scale height=200}}}</div>
+      	<div class="feature-image feature-two-image"><img src="{{{cloudinaryUrl content.featureTwoIcon width=auto height=100 crop='scale' quality=100}}}"></div>
         <div class="feature-header-two"><h3>{{{content.featureTwoTitle.html}}}</h3></div>
       	<div class="feature-text feature-two-text">{{{content.featureTwoParagraph.html}}}</div>
       </div>
       <div class="feature-three col-sm-4">
-        <div class="feature-image feature-three-image">{{{cloudinaryImg content.featureThreeIcon crop=scale height=200}}}</div>
+        <div class="feature-image feature-three-image"><img src="{{{cloudinaryUrl content.featureThreeIcon width=auto height=100 crop='scale' quality=100}}}"></div>
         <div class="feature-header-three"><h3>{{{content.featureThreeTitle.html}}}</h3></div>  
       	<div class="feature-text feature-three-text">{{{content.featureThreeParagraph.html}}}</div>
       </div>
@@ -61,7 +61,7 @@
     <div class="game-flow">
       <h3 class="flow-play-header">{{{content.flowOfGameHeader.html}}}</h3>
     	<div class="flow-play-para">{{{content.flowOfGameParagraph.html}}}</div>
-    	<div class="flow-play-pic">{{{cloudinaryImg content.flowOfGamePicture crop=scale height=200}}}</div>
+    	<div class="flow-play-pic"><img src="{{{cloudinaryUrl content.featureOneIcon width=auto height=100 crop='scale' quality=100}}}"></div>
     </div>
   </div>
 
