--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -35,7 +35,7 @@
   </div>
 
   {{!-- FEATURES --}}
-  <div class="row feature col-lg-10 col-sm-10 col-centered">
+  <div class="row feature col-lg-9 col-sm-9 col-centered">
     <div class="game-features">
       <div class="feature-one col-sm-4">
       	<div class="feature-image feature-one-image"><img src="{{{cloudinaryUrl content.featureOneIcon width=auto height=100 crop='scale' quality=100}}}"></div>
@@ -75,7 +75,7 @@
   {{!-- CREDITS --}}
   <div class="row credits col-lg-10 col-sm-10 col-centered">
   	<div class="design-dev-team">
-	    <h3>Design and Development Team</h3>
+	    <h3 class="team-header">Design and Development Team</h3>
 	    <div class="team principal-investigator"><h5 class="team-title">Principal Investigator</h5>{{content.principalInvestigator.name}}</div>
       <div class="team-1-half col-sm-6">
 	    <div class="team product-manager"><h5 class="team-title">Product Manager</h5>{{content.productManager.name}}</div>
