--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -76,18 +76,18 @@
   <div class="row credits col-lg-10 col-sm-10 col-centered">
   	<div class="design-dev-team">
 	    <h3>Design and Development Team</h3>
-	    <div class="team principal-investigator"><h5 class="team-title">Principal Investigator</h5>{{content.principalInvestigator.name}}</div>
+	    <div class="team row principal-investigator"><h5 class="team-title">Principal Investigator</h5>{{content.principalInvestigator.name}}</div>
       <div class="team-1-half col-sm-6">
-	    <div class="team product-manager"><h5 class="team-title">Product Manager</h5>{{content.productManager.name}}</div>
-	    <div class="team lead-developer"><h5 class="team-title">Lead Developer</h5>{{content.leadDeveloper.name}}</div>
-      <div class="team game-designer"><h5 class="team-title">Game Designer</h5>{{content.otherGameDesigner.name}}, {{content.gameDesigner.name}}</div>
-      <div class="team production-assistant"><h5 class="team-title">Production Assistant</h5>{{content.productionAssistant.name}}</div>
+  	    <div class="team row"><h5 class="team-title">Product Manager</h5>{{content.productManager.name}}</div>
+  	    <div class="team row"><h5 class="team-title">Lead Developer</h5>{{content.leadDeveloper.name}}</div>
+        <div class="team row"><h5 class="team-title">Game Designer</h5>{{content.otherGameDesigner.name}}, {{content.gameDesigner.name}}</div>
+        <div class="team row"><h5 class="team-title">Production Assistant</h5>{{content.productionAssistant.name}}</div>
       </div>
       <div class="team-2-half col-sm-6">
-      <div class="team project-manager"><h5 class="team-title">Project Manager</h5>{{content.projectManager.name}}</div>
-      <div class="team art-director"><h5 class="team-title">Art Director</h5>{{content.artDirector.name}}</div>
-	    <div class="team junior-developer"><h5 class="team-title">Junior Developer</h5>{{content.juniorDeveloper.name}}</div>
-	    <div class="team other-production-assistant"><h5 class="team-title">Production Assistant</h5>{{content.otherProductionAssistant.name}}</div>
+        <div class="team row"><h5 class="team-title">Project Manager</h5>{{content.projectManager.name}}</div>
+        <div class="team row"><h5 class="team-title">Art Director</h5>{{content.artDirector.name}}</div>
+  	    <div class="team row"><h5 class="team-title">Junior Developer</h5>{{content.juniorDeveloper.name}}</div>
+  	    <div class="team row"><h5 class="team-title">Production Assistant</h5>{{content.otherProductionAssistant.name}}</div>
       </div>
     </div>
     <div class="el-logo">
