--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,23 +11,23 @@
   <div class="row top">
     {{!-- TOP SECTION/LANDING --}}
     <div class="top-section">
-      <h2 class="header"><span class="whats">what's</span> <span class="at-sign">@</span> <span class="header-stake">stake?</span></h2>
+      <h2 class="page-header"><span class="whats">what's</span> <span class="at-sign">@</span> <span class="header-stake">stake?</span></h2>
       <div class="play-button"></div>
     </div>
   </div>
   
   {{!-- GAME PITCH --}}
   <div class="row pitch">
-    <div class="game-pitch col-md-10 col-sm-10">
+    <div class="game-pitch col-md-9 col-sm-10">
       <div class="half-1">
         <h4 class="tagline">{{{content.tagline.html}}}</h4>
         <div class="cta-para-one">{{{content.ctaParagraphOne.html}}}</div>
         <div class="cta-para-two">{{{content.ctaParagraphTwo.html}}}</div>
         <div class="cta-points">
           <ul>
-            <li><strong>{{{content.pointOneText.html}}}</strong></li>
-            <li><strong>{{{content.pointTwoText.html}}}</strong></li>
-            <li><strong>{{{content.pointThreeText.html}}}</strong></li>
+            <li class="cta-points"><strong>{{{content.pointOneText.html}}}</strong></li>
+            <li class="cta-points"><strong>{{{content.pointTwoText.html}}}</strong></li>
+            <li class="cta-points"><strong>{{{content.pointThreeText.html}}}</strong></li>
           </ul>
         </div>
       </div>
