--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,7 @@
   <div class="row top">
     {{!-- TOP SECTION/LANDING --}}
     <div class="top-section">
-      <h2 class="page-header"><span class="whats">what's</span> <span class="at-sign">@</span> <span class="header-stake">stake?</span></h2>
+      <h2 class="landing-header"><span class="whats">what's</span> <span class="at-sign">@</span><span class="header-stake">stake?</span></h2>
       <div class="play-button"></div>
     </div>
   </div>
