Layout updates for login.

--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -40,8 +40,9 @@ html, body {
 // Body
 .body {
 
-  font-family: "Avenir";
-  color: black;
+  font-family: "AvenirNext";
+  font-size: 3.5em;
+  color: white;
 	
 }
 
