--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -175,6 +175,15 @@ var checkIfLoggedIn = function() {
 
 }
 
+/*
+ Save player name and advance to next screen
+*/
+$(document).on('click', '.btn.game_login', function(evt) {
+
+
+
+});
+
 /* 
  Logs player into game with room code and name
 */
