--- a/public/styles/_core/forms.scss
+++ b/public/styles/_core/forms.scss
@@ -1,6 +1,5 @@
 .form { 
 	min-height:100%;
-	color: black;
 
 	// Animation keyframes
 	@include keyframes(invalid-field) {
@@ -33,7 +32,7 @@
 	input {
 
 		padding: 20px;
-    font-size: x-large;
+    font-size: 2.2em;
     margin-bottom: 20px;
     position: relative;
     max-width: 100%;
@@ -63,7 +62,7 @@
 	}
 
 	input[type=text] {
-		border-radius: 50px;
+		border-radius: 20px;
 	}
 
 	&.row {
@@ -92,18 +91,6 @@
 	  width: 100%;
 	  padding-left: 30px;
 	  margin-bottom: -20px;
-	
-	}
-	.input-container .octothorp {
-
-	    position: absolute;
-	    display: block;
-	    top: 24px;
-	    color: gray;
-	    padding-left: 5px;
-	    width: 45px;
-	    font-size: x-large;
-	    vertical-align: middle;
 	
 	}
 
