--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,29 +1,46 @@
+
+<div id="login-header">
+  <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
+  <p>A Game for Deliberative Democracy</p>
+</div>
+
 {{!-- NAME ENTRY --}}
 <div class="lobby" id="login" class="col-sm-12">
-  <div class="form login col-xs-12 col-centered">
-    <div id="login-header">
-      <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
-      <p>A Game for Deliberative Democracy</p>
-    </div>
-    {{!-- <input type="text" id="access_code" placeholder="room code"> <br /> --}}
-    <input type="text" id="player_name" placeholder="Type your name here"> <br />
+  <div class="form col-xs-12 col-centered">
+
+    <input type="text" id="player-name" placeholder="Type your name here"> <br />
     <div class="error">Error!</div>
-    <input id="btn_submit_name" class="btn btn-default game_login" type="submit" name="submit" value="play">
-    {{!-- <input id="btn_new_game" class="btn btn-default" type="submit" name="submit" value="new game"> --}}
+    <input id="btn_submit_name" data-package='{"name": "#player-name"}' class="btn btn-default submit_name" type="submit" name="submit" value="play">
+
     <section id="description">
-    <p>@Stake was created to help facilitate productive and fair conversations in classrooms, conferences, strategic board meetings, and public events. By playing @Stake, participants learn that productive conversations thrive off of authentic listening and multiple perspectives. All you need to get started is 3-5 players.</p>
+      <p>@Stake was created to help facilitate productive and fair conversations in classrooms, conferences, strategic board meetings, and public events. By playing @Stake, participants learn that productive conversations thrive off of authentic listening and multiple perspectives. All you need to get started is 3-5 players.</p>
     </section>
 
   </div>
-  <div class="row login waiting" style="display:none">
-    <h1 id="game-code">{{game.accessCode}}</h1>
-    <h3>Waiting for players</h3>
-    <div class="col-sm-3"></div>
-    <div class="row col-sm-9" id="players">
-      
+</div>
+
+{{!-- PLAYER CHOICES--}}
+<div class="lobby" id="choices" class="col-sm-12" style="display:none">
+  <div class="form login col-xs-12 col-centered">
+
+    <div id="btn_new_game" class="btn btn-default">
+      <h2>Start New Game</h2>
+      <p>Select a deck and receive a 4 digit room code that other players can use to join your game</p>
     </div>
-    <div class="col-sm-3"></div>
+
+    <div id="btn_join_game" class="btn btn-default">
+      <h2>Join a Game</h2>
+      <p>use your 4 digit room code to join a game</p>
+    </div>
+
   </div>
+</div>
+
+{{!-- JOIN GAME --}}
+<div class="lobby form" id="join" style="display:none">
+    <input type="text" id="access_code" placeholder="Type your room code here"> <br />
+  <div class="error">Error!</div>
+  <input id="btn_submit_code"  data-event="game:entry" data-package='{"code": "#access_code", "name": "#player-name"}' class="btn btn-default game_login" type="submit" name="submit" value="play">
 </div>
 
 {{!-- NEW GAME --}}
@@ -32,8 +49,7 @@
     <div class="form create col-lg-6 col-centered">
       <div class="form-prompt white">access code:</div>
       <div class="access-code"></div>
-      <div class="form-prompt white">enter username:</div>
-      <input type="text" id="player-name" placeholder="name"> <br />
+      <br />
       <div class="form-prompt white">select the deck to use:</div>
       <div id="decks">
       </div>
